...
            <objects>
                <tableViewController storyboardIdentifier="TripsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ch2-ux-iKq" customClass="TripsViewController" customModule="TripViewer" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="88" estimatedRowHeight="88" sectionHeaderHeight="26" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="dAb-Pw-38G" customClass="InfoLoadingTableView" customMod
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="tripTableIdentifier"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="Ch2-ux-iKq" id="fLI-QL-yAP"/>
                            <outlet property="delegate" destination="Ch2-ux-iKq" id="tGG-0J-qgo"/>
                        </connections>
                    </tableView>
...
                            <connections>
                                <action selector="helpAction" destination="Ch2-ux-iKq" id="eYv-Jl-DTO"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="arrow.up.arrow.down.circle" catalog="system" id="7O8-Wc-cab">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="sortButtonIdentifier"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="sortAction" destination="Ch2-ux-iKq" id="8Io-BS-ECn"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
